[gd_scene load_steps=12 format=2]

[ext_resource path="res://CustomStencil.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Stage.gd" type="Script" id=3]
[ext_resource path="res://CustomStencil.gdshader" type="Shader" id=4]
[ext_resource path="res://StencilButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("Stack/1/Viewport")

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/color = Color( 0, 0.0156863, 1, 1 )

[sub_resource type="ViewportTexture" id=10]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/color = Color( 0.0313726, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/color = Color( 1, 0, 0, 1 )

[node name="Stage" type="Node2D"]
script = ExtResource( 3 )
stencil = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )
stencil = ExtResource( 1 )

[node name="Footer" type="Panel" parent="UI"]
margin_left = 1.0
margin_top = 504.0
margin_right = 1025.0
margin_bottom = 600.0

[node name="Stencils" type="HBoxContainer" parent="UI/Footer"]
anchor_bottom = 0.399
margin_left = 8.0
margin_top = 7.0
margin_right = 500.0
margin_bottom = 47.0

[node name="TextureButton" parent="UI/Footer/Stencils" instance=ExtResource( 5 )]
visible = false
margin_right = 561.0
margin_bottom = 40.0
texture_normal = SubResource( 9 )

[node name="Sidebar" type="Panel" parent="UI"]
margin_left = 674.0
margin_right = 1026.0
margin_bottom = 503.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Sidebar"]
anchor_left = -0.099
anchor_top = 0.05
anchor_right = -0.099
anchor_bottom = 0.114
margin_left = 166.0
margin_top = -0.15
margin_right = 346.0
margin_bottom = -0.150002
alignment = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="UI/Sidebar/HBoxContainer"]
margin_left = 43.0
margin_right = 75.0
margin_bottom = 32.0
grow_horizontal = 0
focus_mode = 0
enabled_focus_mode = 0
text = "Col"
align = 0
color = Color( 1, 0, 0, 1 )

[node name="OptionButton" type="OptionButton" parent="UI/Sidebar/HBoxContainer"]
margin_left = 79.0
margin_right = 139.0
margin_bottom = 32.0
text = "Solid"

[node name="Button" type="Button" parent="UI/Sidebar/HBoxContainer"]
margin_left = 143.0
margin_right = 180.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
text = "Add"

[node name="TextureRect" type="TextureRect" parent="UI/Sidebar"]
margin_left = 49.0
margin_top = 16.0
margin_right = 99.0
margin_bottom = 66.0
size_flags_horizontal = 3
expand = true

[node name="PreviewStencil" parent="UI/Sidebar" instance=ExtResource( 1 )]
show_behind_parent = true

[node name="Stack" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="1" parent="Stack" instance=ExtResource( 1 )]
material = SubResource( 6 )
position = Vector2( 104, 1 )
z_as_relative = true
color = Color( 0.0313726, 1, 0, 1 )
type = "solid"

[node name="Sprite" parent="Stack/1" index="0"]
texture = SubResource( 10 )

[node name="Polygon2D" parent="Stack/1/Viewport" index="0"]
color = Color( 0.0313726, 1, 0, 1 )
invert_enable = false
polygon = PoolVector2Array( 0, 0, 500, 0, 500, 500, 0, 500 )

[node name="2" parent="Stack" instance=ExtResource( 1 )]
material = SubResource( 6 )
position = Vector2( 104, 1 )
z_as_relative = true
color = Color( 1, 1, 0, 1 )

[node name="3" parent="Stack" instance=ExtResource( 1 )]
material = SubResource( 5 )
position = Vector2( 104, 1 )
color = Color( 0.0313726, 1, 0, 1 )
type = "circle"

[node name="4" parent="Stack" instance=ExtResource( 1 )]
visible = false
material = SubResource( 4 )
position = Vector2( 104, 2 )
z_as_relative = true
type = "circle"
size = 0

[node name="5" parent="Stack" instance=ExtResource( 1 )]
visible = false
material = SubResource( 6 )
position = Vector2( 104, 1 )
z_as_relative = true
color = Color( 0, 0.0156863, 1, 1 )
size = 2

[node name="6" parent="Stack" instance=ExtResource( 1 )]
material = SubResource( 6 )
position = Vector2( 104, 1 )
z_as_relative = true
type = "square"
size = 2

[node name="Menu" type="CanvasLayer" parent="."]
layer = 2

[node name="MainMenu" parent="Menu" instance=ExtResource( 6 )]
visible = false

[connection signal="color_changed" from="UI/Sidebar/HBoxContainer/ColorPickerButton" to="UI" method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="UI/Sidebar/HBoxContainer/OptionButton" to="UI" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="UI/Sidebar/HBoxContainer/Button" to="." method="_on_Button_pressed"]

[editable path="Stack/1"]
